# meson

./: .env  requirements.txt  run_project_tests.py  setup.py
mesonbuild/: build.py  coredata.py  interpreter.py  mesonlib.py
mesonbuild/backend/: ninjabackend.py
mesonbuild/compilers/: compilers.py
mesonbuild/modules/: hadron.py  python.py
mesonbuild/scripts/: conda_gen.py  wheel_gen.py  yelphelper.py
mesonbuild/tools/mir/: c-generator.rkt  common-c.rkt  core.rkt  main.rkt  python-generator.rkt
mesonbuild/tools/mir/pythongen/: callable.c  callable.h  common_c.h  utils.c  utils.h
mesonbuild/wrap/: wrap.py
test cases/frameworks/6 gettext/: meson.build
test cases/mir/1 python gen/: aliases_source.c  callable.py  callable_source.c  graph_conf.py  meson.build  point_source.c  python_type.c  python_type.h  test.py  test_callable.py  utility_source.c
test cases/mir/1 python gen/mir-sources/: aliases.mir  callable.mir  point.mir  utility.mir
tools/mir/: c-generator.rkt  common-c.rkt  core.rkt  main.rkt  mir-generator.rkt  python-generator.rkt  utils.rkt
tools/mir/pythongen/: common_c.h  utils.c  utils.h
